-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: proton-c-0.27.0
-
Component/s: proton-c
-
Labels:
This bug was found by the oss-fuzz project: https://oss-fuzz.com/testcase?key=5118747114209280
If the last delivery value affected is legitimate (before the next sequence number to be assigned), but the first value is hugely before it then the disposition frame handling will loop through every affected delivery number from first to last which can take a very long time and effectively hang the process.