PROTON-1978: [c] Make disposition performative handling more efficient - Minimise the effort to update deliveries affected by the disposition   performative:   If there are fewer deliveries outstanding than delivery ids in the   performative then loop through them all to update them.   Otherwise, loop through the specified delivery ids. - We have to go through this effort as we don't keep the outstanding   deliveries sorted by id. Instead they are in a hash table and in a   separate linked list.

Problem found by oss-fuzz: https://oss-fuzz.com/testcase?key=5118747114209280